--- a/Emmaus/EmmausFrontEnd/templates/home.html
+++ b/Emmaus/EmmausFrontEnd/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %} Home Page {% endblock %}
+{% extends "base_new.html" %} {% block title %} Home Page {% endblock %}
 {% block content %}
 <p>This is the Home page.</p>
 {% endblock %}
