updated home page. Centered titles and pics.

--- a/Emmaus/EmmausFrontEnd/templates/home.html
+++ b/Emmaus/EmmausFrontEnd/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block title %} Home Page {% endblock %}
 {% block content %}
 <div class="mx-auto bg-light bg-gradient" style="width:68%;">
-<h1>About the Valley Walk to Emmaus</h1>
+<h1 class="text-center">About the Valley Walk to Emmaus</h1>
 
 
 		<div class="container-fluid" id="body">
@@ -16,8 +16,8 @@
 				</div>
 
 			<div id="body-right">
-				<h2>The Valley Walk to Emmaus</h2><br>
-				<img src="../static/images/TarnHows.jpg" width="325" alt="Tarn Hows"/><br><br>
+				<h2 class="text-center">The Valley Walk to Emmaus</h2><br>
+				<img class="center-block" src="../static/images/TarnHows.jpg" width="325" alt="Tarn Hows"/><br><br>
 				<p>The Valley Walk to Emmaus began conducting walks in 2001 to serve the community of faith in the West Georgia / East 
 				Alabama Region. Our membership currently represents over 150 different churches from a wide range of Protestant 
 				denominations. Walks are held two times per year at Pine Eden Christian Retreat Center in Hamilton, Georgia</p>
