--- a/Emmaus/EmmausFrontEnd/templates/home.html
+++ b/Emmaus/EmmausFrontEnd/templates/home.html
@@ -17,12 +17,12 @@
 
 			<div id="body-right">
 				<h2 class="text-center">The Valley Walk to Emmaus</h2><br>
-				<img class="center-block" src="../static/images/TarnHows.jpg" width="325" alt="Tarn Hows"/><br><br>
+				<img class="center-block img-fluid" src="../static/images/TarnHows.jpg" width="325" alt="Tarn Hows"/><br><br>
 				<p>The Valley Walk to Emmaus began conducting walks in 2001 to serve the community of faith in the West Georgia / East 
 				Alabama Region. Our membership currently represents over 150 different churches from a wide range of Protestant 
 				denominations. Walks are held two times per year at Pine Eden Christian Retreat Center in Hamilton, Georgia</p>
 				<iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FValley-Walk-To-Emmaus%2F165108756880842&amp;layout=standard&amp;show_faces=false&amp;width=450&amp;action=like&amp;font=tahoma&amp;colorscheme=light&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:35px;" allowTransparency="true"></iframe>
 			</div>
-		<div class="clear"></div>
+		</div>
 </div>
 {% endblock %}
