working on admin forms

--- a/Emmaus/EmmausFrontEnd/templates/base.html
+++ b/Emmaus/EmmausFrontEnd/templates/base.html
@@ -64,7 +64,7 @@
                   Walk Information
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">Dates and Times</a></li>
+                  <li><a class="dropdown-item" href="/event">Dates and Times</a></li>
                   <li><a class="dropdown-item" href="/sponsorship">Sponsorship</a></li>
                   <li><a class="dropdown-item" href="/serve">Servanthood</a></li>
                   <li><a class="dropdown-item" href="/agape">Agape</a></li>
@@ -76,6 +76,26 @@
               <li class="nav-item dropdown">
                 <a class="nav-link active" href="/about">
                   About Us
+                </a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Admin
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                  <li><a class="dropdown-item" href="/manage_board">Manage Board</a></li>
+                  <li><a class="dropdown-item" href="/">Manage Clusters</a></li>
+                  <li><a class="dropdown-item" href="/">Manage Pilgrims</a></li>
+                  <li><a class="dropdown-item" href="/">Manage Walks</a></li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item dropdown">
+                <a class="nav-link active" href="/admin">
+                  Login
                 </a>
               </li>
             </ul>
