started adding admin forms

--- a/Emmaus/EmmausFrontEnd/templates/base.html
+++ b/Emmaus/EmmausFrontEnd/templates/base.html
@@ -26,7 +26,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
           <ul class="navbar-nav">
               <li class="nav-item dropdown">
-                <a class="nav-link active" href="/home">
+                <a class="nav-link" href="/home">
                   Home
                 </a>
               </li>
@@ -74,7 +74,7 @@
             </ul>
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
-                <a class="nav-link active" href="/about">
+                <a class="nav-link" href="/about">
                   About Us
                 </a>
               </li>
@@ -86,7 +86,7 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                   <li><a class="dropdown-item" href="/manage_board">Manage Board</a></li>
-                  <li><a class="dropdown-item" href="/">Manage Clusters</a></li>
+                  <li><a class="dropdown-item" href="/manage_clusters">Manage Clusters</a></li>
                   <li><a class="dropdown-item" href="/">Manage Pilgrims</a></li>
                   <li><a class="dropdown-item" href="/">Manage Walks</a></li>
                 </ul>
